--- a/main.css
+++ b/main.css
@@ -1,9 +1,32 @@
-div {
-    border: 3px soild green;
-    height: 100px;
-    width: 500px;
+@import url("https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe&display=swap" rel="stylesheet") body {
+    padding: 0;
+    margin: 0;
 }
 
-h1 {
-    color: blue;
+#body {
+    background-color: red;
+}
+
+#top {
+    display: flex;
+    justify-content: center;
+    height: 50px;
+    align-items: center;
+    font-family: 'ZCOOL KuaiLe', cursive;
+}
+
+#main {
+    display: flex;
+    justify-content: center;
+    height: 500px;
+    align-items: center;
+    font-family: 'ZCOOL KuaiLe', cursive;
+}
+
+#input {
+    display: flex;
+    justify-content: center;
+    height: 50px;
+    align-items: center;
+    margin: auto;
 }
